# OpenSource

./: CMakeLists.txt  README.md  calcprogressdialog.cpp  calcprogressdialog.h  calcworker.cpp  calcworker.h  mainwindow.cpp  mainwindow.h  taskmanager.cpp  taskmanager.h
